# MultiViewPerception

./: CMakeLists.txt  README.md  main  main.cpp
include/camera/: cameraInterface.hpp  opencvCamera.hpp  realsenseCamera.hpp
include/detector/: YOLODetector.hpp  detection.hpp
include/utils/: YAMLLoader.hpp  visualizer.hpp
scripts/: test_onnx.py
src/: YAMLLoader.cpp  YOLODetector.cpp  opencvCamera.cpp  realsenseCamera.cpp  visualizer.cpp
